# ChangeLog for sys-fs/owfs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/owfs/ChangeLog,v 1.7 2008/02/24 22:58:38 wschlich Exp $

  24 Feb 2008; Wolfram Schlich <wschlich@gentoo.org> files/owfs.initd:
  fix variable name in owfs init script wrt bug #203642

*owfs-2.7_p3 (24 Jan 2008)

  24 Jan 2008; Wolfram Schlich <wschlich@gentoo.org> +owfs-2.7_p3.ebuild:
  version bump

  17 Dec 2007; Wolfram Schlich <wschlich@gentoo.org> files/owfs.confd,
  files/owfs.initd, files/owftpd.confd, files/owftpd.initd,
  files/owhttpd.confd, files/owhttpd.initd, files/owserver.confd,
  files/owserver.initd:
  change owserver port number to its IANA assigned port 4304, owhttpd and
  owftpd now use unassigned ones from the 43xx range

*owfs-2.7_p0-r2 (17 Dec 2007)

  17 Dec 2007; Wolfram Schlich <wschlich@gentoo.org> +files/owfs.confd,
  +files/owfs.initd, files/owftpd.initd, files/owhttpd.initd,
  files/owserver.initd, +owfs-2.7_p0-r2.ebuild:
  added owfs FUSE daemon support, small fixup for init scripts

*owfs-2.7_p0-r1 (15 Dec 2007)

  15 Dec 2007; Wolfram Schlich <wschlich@gentoo.org> +files/owftpd.confd,
  +files/owftpd.initd, +files/owhttpd.confd, +files/owhttpd.initd,
  +files/owserver.confd, +files/owserver.initd, +owfs-2.7_p0-r1.ebuild:
  added daemon init scripts and zeroconf USE flag, renamed ftp
  USE flag to ftpd

  08 Dec 2007; Wolfram Schlich <wschlich@gentoo.org> owfs-2.7_p0.ebuild:
  fix php check, add ~amd64

*owfs-2.7_p0 (06 Dec 2007)

  06 Dec 2007; Wolfram Schlich <wschlich@gentoo.org> +metadata.xml,
  +owfs-2.7_p0.ebuild:
  initial import
